--- a/app/src/main/res/layout/crop_income_expense_list_card.xml
+++ b/app/src/main/res/layout/crop_income_expense_list_card.xml
@@ -96,7 +96,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.7"
                             android:text="Transaction "
-                            android:textColor="#000"
+                            android:textColor="#76A76A"
                             android:textSize="14dp" />
 
                         <TextView
@@ -106,7 +106,7 @@
                             android:layout_weight="0.3"
                             android:layout_marginLeft="5dp"
                             android:text="Income"
-                            android:textColor="#696666"
+                            android:textColor="#000"
                             android:textSize="14dp" />
 
 
@@ -134,7 +134,7 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="0.7"
                             android:text="Category "
-                            android:textColor="#000"
+                            android:textColor="#76A76A"
                             android:textSize="14dp" />
 
                         <TextView
@@ -144,7 +144,7 @@
                             android:layout_weight="0.3"
                             android:layout_marginLeft="5dp"
                             android:text="Machinery"
-                            android:textColor="#696666"
+                            android:textColor="#000"
                             android:textSize="14dp" />
 
 
@@ -172,7 +172,7 @@
                             android:layout_height="wrap_content"
                             android:text="Status "
                             android:layout_weight="0.7"
-                            android:textColor="#000"
+                            android:textColor="#76A76A"
                             android:textSize="14dp" />
 
                         <TextView
@@ -182,79 +182,100 @@
                             android:layout_weight="0.3"
                             android:layout_marginLeft="5dp"
                             android:text="Pending Payment"
-                            android:textColor="#696666"
+                            android:textColor="#000"
                             android:textSize="14dp" />
 
 
 
                     </LinearLayout>
 
-
                 </LinearLayout>
-        </LinearLayout>
-
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
                 <LinearLayout
-                    android:orientation="horizontal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/input_shapes_green">
+                    android:padding="4dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="3dp"
+                    android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Amount :"
-                        android:textColor="@color/whiteColor"
-                        android:textStyle="bold"
-                        android:textSize="15sp" />
-
-
+                        android:text="Amount "
+                        android:layout_weight="0.7"
+                        android:textColor="#76A76A"
+                        android:textSize="14dp" />
 
                     <TextView
                         android:id="@+id/txt_crop_income_expense_card_gross_amount"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="200,000"
-                        android:textColor="@color/whiteColor"
-
-                        android:textSize="14sp" />
-                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="right"
-                        android:orientation="horizontal">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Date :"
-                        android:textColor="@color/whiteColor"
+                        android:layout_weight="0.3"
+                        android:layout_marginLeft="5dp"
+                        android:text="200,000"
+                        android:textColor="#000"
                         android:textStyle="bold"
-                        android:textSize="15sp"
-                        android:layout_marginLeft="4dp"
-                        android:layout_marginRight="4dp"/>
-
-                    <TextView
-                        android:id="@+id/txt_crop_income_expense_card_date"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="12-03-2019"
-                        android:gravity="end"
-
-                        android:textColor="@color/whiteColor"
                         android:textSize="14dp" />
 
-                    </LinearLayout>
 
 
                 </LinearLayout>
 
+            </LinearLayout>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="5dp"
+                android:background="#D2D3D2"
+                />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="4dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_marginTop="3dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Date "
+                        android:layout_weight="0.7"
+                        android:textColor="#76A76A"
+                        android:textSize="14dp" />
+
+                    <TextView
+                        android:id="@+id/txt_crop_income_expense_card_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.3"
+                        android:layout_marginLeft="5dp"
+                        android:text="12-03-2019"
+                        android:textColor="#000"
+                        android:textSize="14dp" />
 
 
 
+                </LinearLayout>
 
+            </LinearLayout>
+        </LinearLayout>
 
     </LinearLayout>
-
 
 
 </LinearLayout>
