--- a/app/src/main/res/layout/fragment_store_add_fertilizer.xml
+++ b/app/src/main/res/layout/fragment_store_add_fertilizer.xml
@@ -1,8 +1,8 @@
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.myfarmnow.myfarmcrop.popupDailogs.farmrecords.StoreAddFertilizerFragment">
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context="com.myfarmnow.myfarmcrop.popupDailogs.farmrecords.StoreAddFertilizerFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -389,7 +389,3 @@
     </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-
-
-</layout>
