--- a/app/src/main/res/layout/fragment_store_add_seed.xml
+++ b/app/src/main/res/layout/fragment_store_add_seed.xml
@@ -1,9 +1,9 @@
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.myfarmnow.myfarmcrop.popupDailogs.farmrecords.StoreAddSeedFragment">
-    <androidx.constraintlayout.widget.ConstraintLayout
 
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        tools:context="com.myfarmnow.myfarmcrop.popupDailogs.farmrecords.StoreAddSeedFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
@@ -159,27 +159,15 @@
                             android:layout_marginRight="10dp"
                             android:orientation="horizontal">
 
-                            <Spinner
+                            <EditText
                                 android:id="@+id/txt_crop_variety"
                                 android:layout_width="match_parent"
                                 android:layout_height="50dp"
-                                android:layout_centerVertical="true"
-                                android:layout_gravity="center"
-                                android:background="@android:color/transparent"
-                                android:gravity="center"
-                                android:hint="Variety"
-                                android:spinnerMode="dropdown"/>
+                                android:paddingStart="@dimen/dimen_10dp"
+                                android:background="@drawable/edittext_corner"
+                                android:hint="@string/variety"
+                                android:textSize="14sp" />
 
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_alignParentRight="true"
-                                android:layout_alignParentEnd="true"
-                                android:layout_marginEnd="8dp"
-                                android:layout_marginRight="10dp"
-                                android:layout_centerVertical="true"
-                                android:layout_gravity="center"
-                                android:src="@drawable/ic_baseline_arrow_drop_down_24" />
 
                         </RelativeLayout>
                     </LinearLayout>
@@ -413,5 +401,3 @@
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-</layout>
