--- a/app/src/main/res/layout/add_produce_dialog.xml
+++ b/app/src/main/res/layout/add_produce_dialog.xml
@@ -1,133 +1,288 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/colorPrimary"
-    android:orientation="vertical"
-    app:cardCornerRadius="10dp">
+    android:layout_height="match_parent"
+    app:cardCornerRadius="20dp">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="15dp"
-        android:fontFamily="@font/josefin_sans"
-        android:text="Add Produce"
-        android:textColor="@color/white"
-        android:textSize="20sp" />
-
-    <com.myfarmnow.myfarmcrop.utils.layout.OtpEdittext
-        android:id="@+id/produce_name"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="30dp"
-        android:background="@drawable/edittext_corner"
-        android:fontFamily="@font/josefin_sans"
-        android:hint="Maize"
-        android:inputType="textPersonName"
-        android:paddingLeft="@dimen/dimen_15sp"
-        android:tag="Name : "
-        android:textAlignment="viewStart"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/textColorPrimaryDark" />
+        android:layout_height="match_parent">
 
-    <com.myfarmnow.myfarmcrop.utils.layout.OtpEdittext
-        android:id="@+id/produce_variety"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="30dp"
-        android:background="@drawable/edittext_corner"
-        android:fontFamily="@font/josefin_sans"
-        android:hint="Asia F1"
-        android:inputType="textPersonName"
-        android:paddingStart="@dimen/dimen_15sp"
-        android:tag="Variety : "
-        android:textAlignment="viewStart"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/textColorPrimaryDark" />
-
-    <com.myfarmnow.myfarmcrop.utils.layout.OtpEdittext
-        android:id="@+id/produce_quantity"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="30dp"
-        android:background="@drawable/edittext_corner"
-        android:fontFamily="@font/josefin_sans"
-        android:hint="800 Kg"
-        android:inputType="textPersonName"
-        android:paddingStart="@dimen/dimen_15sp"
-        android:tag="Quantity : "
-        android:textAlignment="viewStart"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/textColorPrimaryDark" />
-
-    <com.myfarmnow.myfarmcrop.utils.layout.OtpEdittext
-        android:id="@+id/produce_price"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="30dp"
-        android:background="@drawable/edittext_corner"
-        android:fontFamily="@font/josefin_sans"
-        android:hint="500/Kg"
-        android:inputType="textPersonName"
-        android:paddingStart="@dimen/dimen_15sp"
-        android:tag="Price : UGX "
-        android:textAlignment="viewStart"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/textColorPrimaryDark" />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="150dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="30dp"
-        app:cardCornerRadius="@dimen/dimen_5dp">
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/produce_image"
+                android:id="@+id/produce_close"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="end"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="30dp"
+                android:src="@drawable/close" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="15dp"
+                android:fontFamily="@font/josefin_sans"
+                android:text="Produce Market"
+                android:textAllCaps="true"
+                android:textColor="@color/black"
+                android:textSize="25sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/edittext_corner"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:padding="3.4dp">
+
+                        <Spinner
+                            android:id="@+id/produce_name"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:background="@android:color/transparent"
+                            android:entries="@array/crop_add_produce"
+                            android:gravity="center"
+                            android:spinnerMode="dropdown" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="10dp"
+                            android:src="@drawable/ic_baseline_arrow_drop_down_24" />
+                    </RelativeLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentTop="true"
+                        android:background="@drawable/edittext_corner"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:padding="3.4dp">
+
+                        <EditText
+                            android:id="@+id/produce_variety"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_weight="0.7"
+                            android:background="@android:color/transparent"
+                            android:fontFamily="@font/josefin_sans"
+                            android:hint="Variety"
+                            android:paddingLeft="@dimen/dimen_10dp"
+                            android:textSize="14sp" />
+                    </RelativeLayout>
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginTop="@dimen/margin_15"
+                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/edittext_corner"
+                        android:gravity="center"
+                        android:orientation="horizontal"
+                        android:padding="3.4dp">
+
+                        <Spinner
+                            android:id="@+id/produce_quantity_unit"
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:background="@android:color/transparent"
+                            android:entries="@array/crop_quantity_unit"
+                            android:gravity="center"
+                            android:spinnerMode="dropdown" />
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentEnd="true"
+                            android:layout_alignParentRight="true"
+                            android:layout_centerVertical="true"
+                            android:layout_gravity="center"
+                            android:layout_marginEnd="8dp"
+                            android:layout_marginRight="10dp"
+                            android:src="@drawable/ic_baseline_arrow_drop_down_24" />
+                    </RelativeLayout>
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginTop="@dimen/margin_15"
+                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:background="@drawable/edittext_corner"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/produce_quantity"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.7"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/josefin_sans"
+                    android:hint="Quantity Available"
+                    android:inputType="numberDecimal"
+                    android:paddingLeft="@dimen/dimen_10dp"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/produce_quantity_measure"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    android:background="@drawable/edittext_right_corners_green"
+                    android:fontFamily="@font/josefin_sans"
+                    android:gravity="center"
+                    android:text="Kg"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginTop="@dimen/margin_15"
+                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:background="@drawable/edittext_corner"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/produce_price"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.7"
+                    android:background="@android:color/transparent"
+                    android:fontFamily="@font/josefin_sans"
+                    android:hint="Price / Unit"
+                    android:inputType="numberDecimal"
+                    android:paddingLeft="@dimen/dimen_10dp"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/produce_price_currency"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.2"
+                    android:background="@drawable/edittext_right_corners_green"
+                    android:fontFamily="@font/josefin_sans"
+                    android:gravity="center"
+                    android:text="UGX"
+                    android:textColor="@color/white"
+                    android:textSize="14sp" />
+
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/tomato_produce"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="20dp"
+                app:cardCornerRadius="@dimen/dimen_5dp">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
 
-    </androidx.cardview.widget.CardView>
+                    <ImageView
+                        android:id="@+id/produce_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="150dp"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/tomato_produce"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/produce_submit_button"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginBottom="15dp"
-        android:fontFamily="@font/josefin_sans"
-        android:maxLines="1"
-        android:text="@string/submit"
-        android:textAllCaps="true"
-        android:textColor="@color/colorPrimary"
-        app:cornerRadius="10dp"
-        app:rippleColor="@color/darker_gray" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_marginStart="@dimen/dimen_20dp"
+                android:layout_marginTop="@dimen/margin_15"
+                android:layout_marginEnd="@dimen/dimen_20dp"
+                android:layout_marginBottom="@dimen/dimen_20dp"
+                android:background="@drawable/rounded_corners_button">
+
+                <Button
+                    android:id="@+id/produce_submit_button"
+                    style="@style/Button"
+                    android:layout_width="match_parent"
+                    android:layout_height="55dp"
+                    android:background="@android:color/transparent"
+                    android:text="@string/submit"
+                    android:textAllCaps="true"
+                    android:textColor="#ffffff"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
+
+</androidx.cardview.widget.CardView>
