--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -47,6 +47,7 @@
         <item name="android:layout_marginBottom">2dp</item>
         <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
+
     <style name="CropButton" parent="Base.TextAppearance.AppCompat.Button">
 
         <item name="android:background">@drawable/input_shapes</item>
@@ -194,11 +195,11 @@
         <item name="android:textColorSecondary">@color/black</item>
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" >
+    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
         <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" >
+    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light">
         <item name="android:fontFamily">@font/josefin_sans</item>
     </style>
 
@@ -215,6 +216,10 @@
         <item name="android:layout_margin">1sp</item>
         <item name="android:textColor">#34463F</item>>
         <item name="android:fontFamily">@font/josefin_sans</item>
+    </style>
+
+    <style name="CustomAlertDialog" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <item name="android:windowBackground">@drawable/background_custom_dialog</item>
     </style>
 
 </resources>
