--- a/app/src/main/res/layout/add_produce_dialog.xml
+++ b/app/src/main/res/layout/add_produce_dialog.xml
@@ -232,6 +232,17 @@
 
             </LinearLayout>
 
+            <Button
+                android:background="@drawable/rounded_corners_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="15dp"
+                android:textColor="@android:color/white"
+                android:layout_marginEnd="20dp"
+                android:fontFamily="@font/josefin_sans"
+                android:text="Add Photo" />
+
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
