--- a/app/src/main/res/navigation/wallet_nav_graph.xml
+++ b/app/src/main/res/navigation/wallet_nav_graph.xml
@@ -72,12 +72,12 @@
 
     <dialog
         android:id="@+id/payLoan"
-        android:name="com.myfarmnow.myfarmcrop.popupDailogs.wallet.PayLoan"
+        android:name="com.myfarmnow.myfarmcrop.DailogFragments.wallet.PayLoan"
         tools:layout="@layout/wallet_pay_loan" />
 
     <dialog
         android:id="@+id/depositPayments"
-        android:name="com.myfarmnow.myfarmcrop.popupDailogs.wallet.DepositPayments"
+        android:name="com.myfarmnow.myfarmcrop.DailogFragments.wallet.DepositPayments"
         tools:layout="@layout/wallet_payment_methods" />
     <fragment
         android:id="@+id/walletLoanStatusPreview"
