--- a/app/src/main/res/layout/fragment_crop_harvest.xml
+++ b/app/src/main/res/layout/fragment_crop_harvest.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.myfarmnow.myfarmcrop.popupDailogs.farmrecords.CropHarvestFragment">
+    tools:context="com.myfarmnow.myfarmcrop.DailogFragments.farmrecords.CropHarvestFragment">
 
     <ScrollView
         android:layout_width="match_parent"
