--- a/app/src/main/res/layout/fragment_crop_spraying.xml
+++ b/app/src/main/res/layout/fragment_crop_spraying.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="2dp"
-    tools:context="com.myfarmnow.myfarmcrop.popupDailogs.farmrecords.CropSprayingFragment">
+    tools:context="com.myfarmnow.myfarmcrop.DailogFragments.farmrecords.CropSprayingFragment">
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
