--- a/app/src/main/res/layout/fragment_store_add_spray.xml
+++ b/app/src/main/res/layout/fragment_store_add_spray.xml
@@ -3,7 +3,7 @@
     <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        tools:context="com.myfarmnow.myfarmcrop.popupDailogs.farmrecords.StoreAddSprayFragment"
+        tools:context="com.myfarmnow.myfarmcrop.DailogFragments.farmrecords.StoreAddSprayFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
